Fixes product gallery on mobile

--- a/less/plugins/ecommerce/product.less
+++ b/less/plugins/ecommerce/product.less
@@ -86,6 +86,7 @@
     @media @product-small {
         height: 40px;
         left: 16px;
+        max-width: 270px;
     }
 
     // Gallery Item
